# genML

./: .gitignore  AI_ADVISORS_README.md  AI_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DASHBOARD_IMPLEMENTATION.md  README.md  SETUP.md  TEST_SUITE_SUMMARY.md  environment.yml  pyproject.toml  requirements-dashboard.txt  requirements-dev.txt  requirements.txt
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/hooks/: useProgressData.ts  useWebSocket.ts
dashboard/src/store/: progressStore.ts
dashboard/src/types/: pipeline.ts
outputs/: check_lightgbm_gpu.py
src/genML/: flow.py  gpu_utils.py  logging_config.py  main.py  progress_tracker.py  resource_monitor.py  submission_formatter.py  tools.py
src/genML/api/: __init__.py  server.py  websocket_manager.py
src/genML/features/: __init__.py  data_analyzer.py  domain_researcher.py  feature_engine.py  (+2 more)
tests/: __init__.py  conftest.py  test_feature_engine.py  test_feature_processors.py  test_flow.py  test_pipeline_modules.py  test_reproducibility.py  test_submission_formatter.py  test_tools.py
tests/features/: test_data_analyzer.py  test_domain_researcher.py  test_feature_engine_interactions.py  test_feature_selector.py
tests/integration/: __init__.py  test_domain_specific_scenarios.py  test_end_to_end_pipeline.py  test_full_pipeline.py  test_model_training_integration.py  test_performance_comparison.py
tests/validation/: __init__.py  test_edge_cases.py  test_feature_quality.py
(+11 files in other folders)
