[project]
name = "genML"
version = "0.1.0"
description = "Generic ML Pipeline using CrewAI for automated machine learning workflows"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
]

[project.scripts]
kickoff = "genML.main:kickoff"
run_pipeline = "genML.main:kickoff"
plot = "genML.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
